--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -8,10 +8,14 @@
     <strong>Title:</strong>
     <%= project.title %>
   </p>
-
+<%
+=begin%>
   <p>
     <strong>Description:</strong>
     <%= sanitize project.description %>
   </p>
+  
+<%
+=end%>
 
 </div>
