--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Projects</h1>
 
-<div id="projects">
+<div id="projects" class="card">
   <% @projects.each do |project| %>
     <%= render project %>
     <p>
