--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,32 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple-v1.css">
+    <%= stylesheet_link_tag "application", "data-turbo-track" => "reload" %>
+    
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple-v1.css"> 
+    
    
     <%= javascript_importmap_tags %>
-
   </head>
 
   <body>
-  <% if user_signed_in? %>
-  <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+    <% if user_signed_in? %>
+     <nav class="navbar">
+    
+   
+      
+            <%= link_to 'Home', root_path, class: 'nav-link' %>
+     
+        
+            <%= link_to 'Admin', admin_user_roles_path, class: 'nav-link' %>
+        
+      
+            <%= link_to "Log Out", destroy_user_session_path, class: 'nav-link', method: :delete %>
+     
+   
+</nav>
 
-  <% end %>
+    <% end %>
 
     <%= yield %>
   </body>
