--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -30,9 +30,14 @@
 </div>
 
 <div>
+<% if can? :update, @project %>
   <%= link_to "Edit this project", edit_project_path(@project) %> |
+  <% end %>
   <%= link_to "Back to projects", projects_path %>
-
+<% if can? :destroy, @project %>
   <%= button_to "Destroy this project", @project, method: :delete %>
+  <% end %>
+
+ 
 </div>
 
